nova branch